--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/x-icon" href="img/icon.png">
 
         <meta property="og:title" content="Twiga Vision Tanzania" />
-        <meta property="og:description" content="Charity Non-Profit Organisation in Tanzania, Africa. We support to women, children and youth in Tanzania. Main goal is to give them a better life now and in the future." />
+        <meta property="og:description" content="Charity Non-Profit Organisation in Tanzania, Africa. We provide support to women, children and youth in Tanzania. Main goal is to give them a better life now and in the future." />
         <meta property="og:url" content="https://dawidmajewski1991.github.io/Twiga/index.html" />
         <meta property="og:image" content="img/cover.png" />
 
