--- a/areas.html
+++ b/areas.html
@@ -82,9 +82,9 @@
             <section class="sponsor__subsection">
                 <div></div>
                 <div class="sponsor__wall">
-                    <p class="sponsor__paragraph">Sponsoring a child at Unique Choice DayCare Centre is one of the greatest ways to support us. Some children need sponsorship to be at KHM Day Care Centre becasue their parents cannot afford the little fees charged by our Centre just to keep the centre running. You can do the following:</p>
+                    <p class="sponsor__paragraph">Sponsoring a child at Unique Choice DayCare Centre is one of the greatest ways to support us. Some children need sponsorship to be at Unique Choice Daycare Centre becasue their parents cannot afford the little fees charged by our Centre just to keep the centre running. You can do the following:</p>
 
-                    <p class="sponsor__paragraph sponsor__paragraph--list">- pay for a child to be at KHM daycare</p>
+                    <p class="sponsor__paragraph sponsor__paragraph--list">- pay for a child to be at Unique Choice daycare</p>
                     <p class="sponsor__paragraph sponsor__paragraph--list">- pay just for the food they get at school</p>
                     <p class="sponsor__paragraph sponsor__paragraph--list">- pay school fees for them (food excluded)</p>
                     <p class="sponsor__paragraph sponsor__paragraph--list">- pay half school fees for a child</p>
