font color in siret volunteers partners section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <meta property="og:title" content="Twiga Vision Tanzania" />
         <meta property="og:description" content="Charity Non-Profit Organisation in Tanzania, Africa. We support to women, children and youth in Tanzania. Main goal is to give them a better life now and in the future." />
-        <meta property="og:url" content="https://dawidmajewski1991.github.io/Twiga/index.html" />
+        <meta property="og:url" content="https://www.twigavision.org/index.html" />
         <meta property="og:image" content="img/cover.png" />
 
         <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -40,7 +40,7 @@
                 <ul class="navigation__list">
                     
                     <li class="navigation__item">
-                        <a class="navigation__link" href="#about">ABOUT US</a>
+                        <a class="navigation__link" href="#about">ABOUT</a>
                     </li>
 
                     <li class="navigation__item">
