--- a/articles.html
+++ b/articles.html
@@ -83,7 +83,7 @@
 
             <section class="articles articles--one" id="009">
                 <header>
-                    <h2 class="articles__header">New beginnings
+                    <h2 class="articles__header">New beginning
                     </h2>
                 </header>
                 <section class="articles__subsection">
