Added Germany contact details

--- a/articles.html
+++ b/articles.html
@@ -80,6 +80,28 @@
                 <h1 class="subpage__header">TWIGA VISION TANZANIA</h1>
                 <p class="subpage__postheader">ARTICLES</p>
             </header>
+            
+            <section class="articles articles--one" id="010">
+                <header>
+                    <h2 class="articles__header"> My test knowlege
+                    </h2>
+                </header>
+                <section class="articles__subsection">
+                    <div class="articles__wall">
+                        <img class="articles__pic" alt="Business training." src="img/womensday.jpg">
+                    </div>
+                    <div class="articles__wall">
+                        <p class="articles__paragraph">
+                            This is a test text to see if I could change sections on the articles page. Hope this works for me.
+                        </p>
+
+                        <p class="articles__paragraph articles__paragraph--date">2022 OCTOBER 06</p>
+                    </div>
+                </section>
+            </section>
+
+
+
 
             <section class="articles articles--one" id="009">
                 <header>
