--- a/gallery.html
+++ b/gallery.html
@@ -139,6 +139,7 @@
             'img/slider/pic(24).jpg',
             'img/slider/pic(25).jpg',
             'img/slider/pic(26).jpg',
+            'img/slider/pic(27).jpg',
         ];
 
         const slider = new Slider(imageArr)
