--- a/index.html
+++ b/index.html
@@ -378,8 +378,21 @@
                     <p class="footer__paragraph">Email address: <br><span class="footer__important footer__important--lower">twigavisiontz@gmail.com</span></p>
                     <p class="footer__paragraph">Mobile: <br><span class="footer__important footer__important--lower">+255 753-516-911 / 784-516-911</span></p>
                 </section>
+
+
+
+                <section class="footer__logo-grid">
+                    <img class="footer__logo-img" src="img/giraffe.svg" alt="Giraffe Logo.">
+                    <h3 class="footer__logo-text">TWIGA VISION<br>GERMANY</h3>
+                </section>
+                <section class="footer__contact">
+                    <p class="footer__paragraph">Email address: <br><span class="footer__important footer__important--lower">twigavisiongermany@gmail.com</span></p>
+                    <p class="footer__paragraph">WhatsApp: <br><span class="footer__important footer__important--lower"> +49 17681454921 </span></p>
+                </section>   
             </div>
             <div class="footer__ruler"></div>
+            
+            
             <div class="footer__social-grid">
                 <a href="https://www.facebook.com/TwigaVisionTanzania/?ref=page_internal" target="blank" class="footer__social-box"><i class="footer__social-icon footer__social-icon--facebook icon-facebook"></i></a>
                 <a href="https://www.instagram.com/twigavisiontanzania/" target="blank" class="footer__social-box"><i class="footer__social-icon footer__social-icon--instagram icon-instagram"></i></a>
