--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             The charity supports women with children in developing a perspective in Tanzanian society, becoming more independent and starting a professional career without neglecting their children. While the women are given advice on work and self-employment, the children are given the opportunity to go to school.
                             <br>
                             <br>
-                            Young people are provided with life skills’ education that enables them to become good citizens as well as being responsible members of the community.
+                            Young people are provided with life skills’ education that enables them to become good citizens as well as becoming responsible members of the community.
                         </p>
                     </article>
                 </div>
@@ -197,14 +197,14 @@
                     
                     <article class="programs__article">
                         <a class="programs__link" href="programs.html#program-five">
-                            <img class="programs__photo" src="img/evaandzubeda.jpg" alt="People.">
+                            <img class="programs__photo" src="img/kipepeo1.jpg" alt="People.">
                         </a>
                         <div>
                             <a class="programs__link" href="programs.html#program-five">
-                                <h3 class="programs__title">The Kipepeo project (Formally known as Take a Malaika)
+                                <h3 class="programs__title">The Kipepeo project
                                 </h3>
                                 <p class="programs__paragraph">
-                                    This is a membership based women’s group that meets regularly to create hand craft products that are intended to be sold both locally and internationally to increase the income of the women in the group.
+                                    This is a women’s empowerment program that aims at equipping women, from difficult life backgrounds, with all necessary knowledge for them becoming fully independent; socially, emotionally and economically. They meet regularly to learn various skills, including how to make hand craft products and learning how to sew. On top of that they get general lifeskills education.
                                 </p>
                             </a>
                         </div>
