--- a/programs.html
+++ b/programs.html
@@ -85,7 +85,7 @@
             <section class="program__subsection">
                 <div></div>
                 <div class="program__wall">
-                    <p class="program__paragraph">Our sponsorship program is one of the key programs at Twiga Vision Tanzania. This is due to the fact that this program has had directly and/or indirectly impacted on many people’s lives in the surrounding communities, which is exactly what the program is there for. This program was designed to help children or even young people from marginalized communities get an education. Our main target is children whose parents can’t afford sending them to school or have sent the children to school but struggle to pay for the children’s school needs.  Currently, around 80 children are beneficiaries of the program.  A child is sponsored through a daycare centre until when they turn 5 or 5+. Then they go to a government school until when they turn 16 years of age.</p>
+                    <p class="program__paragraph">Our sponsorship program is one of the key programs at Twiga Vision Tanzania. This is due to the fact that this program has had directly and/or indirectly impacted on many people’s lives in the surrounding communities, which is exactly what the program is there for. This program was designed to help children or even young people from marginalized communities get an education. Our main target is children whose parents can’t afford sending them to school or have sent the children to school but struggle to pay for the children’s school needs.  Currently, around 80 children are beneficiaries of the program.  A child is sponsored through a daycare centre until when they turn 5 or 5+. Then they go to a government school until when they turn 16 years of age. When they complete their lower-secondary education, then, it becomes the choice of the sponsor whether to continue sponsoring them into higher education/vocational training or not.</p>
 
                     <p class="program__paragraph">The sponsorship covers the:</p>
                     <p class="program__paragraph program__paragraph--list">- Meals at school</p>
@@ -108,8 +108,8 @@
             <section class="program__subsection program__subsection--mirror">
                 
                 <div class="program__wall">
-                    <p class="program__paragraph">A parent or approaches us asking for sponsorship.</p>
-                    <p class="program__paragraph">We tell them about how our sponsorship works and give them the option to come back when they think they understand the program clearly. Then a home visit is scheduled. When the day arrives we go to the home of the potential sponsored child to collect basic information about them. This information helps us decide whether they are illegible for sponsor or not. This depends on the living condition of the family and other situations that we will have seen. After the home visit, a full profile of the child is created ready to send it to our sponsorship mediators.</p>
+                    <p class="program__paragraph">A parent approaches us asking for sponsorship.</p>
+                    <p class="program__paragraph">We tell them about how our sponsorship works and give them the option to come back when they think they understand the program clearly. Then a home visit is scheduled. When the day arrives we go to the home of the potential sponsored child to collect basic information about them. This information helps us decide whether they are illegible for sponsor or not. This depends on the living condition of the family and other situations that we will have seen. After the home visit, a full profile of the child is created ready to send it to our sponsorship mediators or direct to a pontential sponsor.</p>
                     <p class="program__paragraph">When our sponsorship coordinators get the profile they share it on their respective platforms to try and find a sponsor for that particular child. When a sponsor is found we get informed by our mediators about the sponsor. We then invite the child’s parent/guardian to come to the office to get this news about the child’s.</p>
                 </div>
                 <div></div>
@@ -125,12 +125,12 @@
             <section class="program__subsection program__subsection--mirror">
                 
                 <div class="program__wall">
-                    <p class="program__paragraph">Family Friend program is a program that aims at rescuing families that have been or are being kicked out of a house due to failure of paying house rent or other reasons, which puts the family in danger of being on the street. In Tanzania’s urban areas, there are many cases where people find themselves in such a situation that they are being kicked out of a house that has been their home for a long time, just because they have failed to pay rent. In most cases, according to the laws of Tanzania, the landlord/lady would give those one up to three months of notice before they actually leave. When the time comes, the landlord is entitled to take whatever action towards the tenant, including kicking them out of the house. This is when the victim family desperately seeks for help.
+                    <p class="program__paragraph">Friend Family program is a program that aims at rescuing families that have been or are being kicked out of a house due to failure of paying house rent or other reasons, which puts the family in danger of being on the street. In Tanzania’s urban areas, there are many cases where people find themselves in such a situation that they are being kicked out of a house that has been their home for a long time, just because they have failed to pay rent. In most cases, according to the laws of Tanzania, the landlord/lady would give those one up to three months of notice before they actually leave. When the time comes, the landlord is entitled to take whatever action towards the tenant, including kicking them out of the house. This is when the victim family desperately seeks for help.
                     </p>
                     <p class="program__paragraph">
                         We help people in this situation get a home for at least two years before they can be independent and stand on their own feet. We know that there are so many reasons leading to those situations. One of which is when a man abandons his family because of failure to provide basic needs to the family. In most cases, the woman is left with the children not knowing what to do and where to go. </p>
                     <p class="program__paragraph">
-                        This situation is even more difficult if the woman was previously made a mere house wife. They become fully dependent on the man because they don’t earn money themselves due to such circumstances. This makes it difficult for them to provide for their family when the man leaves. Many women end up being prostitutes, while their children take to the street and turning into street children and this is when we are needed for an intervention. </p>
+                        This situation is even more difficult if the woman was previously made a mere house wife and fully dependent on the man. This makes it really difficult for them to provide for their family when the man leaves. Many women end up being prostitutes, while their children take to the street and turning into street children and this is when we are needed for an intervention. </p>
                 </div>
                 <div></div>
             </section>
@@ -163,7 +163,7 @@
 
         <section class="program program--five" id="program-five">
             <header>
-                <h2 class="program__header">The Kipepeo project - Take a Malaika</h2>
+                <h2 class="program__header">The Kipepeo project </h2>
             </header>
             <section class="program__subsection">
                 <div></div>
