I uploaded changes, created a new file:projects and renamed partners to volunteerprogram

--- a/areas.html
+++ b/areas.html
@@ -35,27 +35,32 @@
             <ul class="navigation__list">
                 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#about">ABOUT</a>
+                    <a class="navigation__link" href="#about">ABOUT</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#mission">MISSION</a>
+                    <a class="navigation__link" href="#mission">MISSION</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#programs">PROGRAMS/PROJECTS</a>
+                    <a class="navigation__link" href="#programs">PROGRAMS</a>
+                </li>
+         
+                <li class="navigation__item">
+                    <a class="navigation__link" href="index.html#projects">PROJECTS</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#support">SUPPORT US</a>
+                    <a class="navigation__link" href="#support">SUPPORT US</a>
+                </li>
+
+
+                <li class="navigation__item">
+                    <a class="navigation__link navigation__link--donate" href="#donate-info">DONATE</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link navigation__link--donate" href="index.html#donate-info">DONATE</a>
-                </li>
-
-                <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#partners">PARTNERS</a>
+                    <a class="navigation__link" href="#volunteerprogram">VOLUNTEER PROGRAM</a>
                 </li>
 
                 <li class="navigation__item">
@@ -67,10 +72,10 @@
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#contact">CONTACT</a>
+                    <a class="navigation__link" href="#contact">CONTACT</a>
                 </li>
             </ul>
-		</nav>
+        </nav>
 	</header>
 
     <main class="main__grid">
@@ -82,7 +87,7 @@
             <section class="sponsor__subsection">
                 <div></div>
                 <div class="sponsor__wall">
-                    <p class="sponsor__paragraph">Sponsoring a child at Unique Choice DayCare Centre is one of the greatest ways to support us. Some children need sponsorship to be at Unique Choice Daycare Centre becasue their parents cannot afford the little fees charged by our Centre just to keep the centre running. You can do the following:</p>
+                    <p class="sponsor__paragraph">Sponsoring a child at Unique Choice DayCare Centre is one of the greatest ways to support us. Some children need sponsorship to be at Unique Choice Daycare Centre becasue their parents cannot afford the little fees charged by the Centre just to keep the centre running. You can do the following:</p>
 
                     <p class="sponsor__paragraph sponsor__paragraph--list">- pay for a child to be at Unique Choice daycare</p>
                     <p class="sponsor__paragraph sponsor__paragraph--list">- pay just for the food they get at school</p>
