--- a/articles.html
+++ b/articles.html
@@ -35,27 +35,32 @@
             <ul class="navigation__list">
                 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#about">ABOUT</a>
+                    <a class="navigation__link" href="#about">ABOUT</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#mission">MISSION</a>
+                    <a class="navigation__link" href="#mission">MISSION</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#programs">PROGRAMS/PROJECTS</a>
+                    <a class="navigation__link" href="#programs">PROGRAMS</a>
+                </li>
+         
+                <li class="navigation__item">
+                    <a class="navigation__link" href="index.html#projects">PROJECTS</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#support">SUPPORT US</a>
+                    <a class="navigation__link" href="#support">SUPPORT US</a>
+                </li>
+
+
+                <li class="navigation__item">
+                    <a class="navigation__link navigation__link--donate" href="#donate-info">DONATE</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link navigation__link--donate" href="index.html#donate-info">DONATE</a>
-                </li>
-
-                <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#partners">PARTNERS</a>
+                    <a class="navigation__link" href="#volunteerprogram">VOLUNTEER PROGRAM</a>
                 </li>
 
                 <li class="navigation__item">
@@ -67,10 +72,10 @@
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#contact">CONTACT</a>
+                    <a class="navigation__link" href="#contact">CONTACT</a>
                 </li>
             </ul>
-		</nav>
+        </nav>
 	</header>
 
     <main class="main__grid">
