--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
             <section class="programs" id="programs">
                 <header>
-                    <h2 class="section__header section__header--white">PROGRAMS & PROJECTS</h2>
+                    <h2 class="section__header section__header--white">PROGRAMS</h2>
                 </header>
                 <section class="programs__grid">
                     <article class="programs__article">
@@ -259,7 +259,7 @@
 
             <section class="programs" id="projects">
                 <header>
-                    <h2 class="section__header section__header--white">PROGRAMS & PROJECTS</h2>
+                    <h2 class="section__header section__header--white">PROJECTS</h2>
                 </header>
                 <section class="programs__grid">
                     <article class="programs__article">
@@ -436,9 +436,9 @@
             
             
             <div class="footer__social-grid">
-                <a href="https://www.facebook.com/TwigaVisionTanzania/?ref=page_internal" target="blank" class="footer__social-box"><i class="footer__social-icon footer__social-icon--facebook icon-facebook"></i></a>
-                <a href="https://www.instagram.com/twigavisiontanzania/" target="blank" class="footer__social-box"><i class="footer__social-icon footer__social-icon--instagram icon-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/twiga-vision-tanzania" target="blank" class="footer__social-box"><i class="footer__social-icon footer__social-icon--linkedin icon-linkedin"></i></a>
+                <a href="https://www.facebook.com/TwigaVisionTanzania/?ref=page_internal" class="footer__social-box"><i class="footer__social-icon footer__social-icon--facebook icon-facebook"></i></a>
+                <a href="https://www.instagram.com/twigavisiontanzania/" class="footer__social-box"><i class="footer__social-icon footer__social-icon--instagram icon-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/twiga-vision-tanzania"class="footer__social-box"><i class="footer__social-icon footer__social-icon--linkedin icon-linkedin"></i></a>
             </div>
         </footer>
 
