--- a/gallery.html
+++ b/gallery.html
@@ -38,11 +38,11 @@
             <ul class="navigation__list">
                 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="#about">ABOUT</a>
+                    <a class="navigation__link" href="index.html#about">ABOUT</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="#mission">MISSION</a>
+                    <a class="navigation__link" href="index.html#mission">MISSION</a>
                 </li>
 
                 <li class="navigation__item">
@@ -54,16 +54,16 @@
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="#support">SUPPORT US</a>
+                    <a class="navigation__link" href="index.html#support">SUPPORT US</a>
                 </li>
 
 
                 <li class="navigation__item">
-                    <a class="navigation__link navigation__link--donate" href="#donate-info">DONATE</a>
+                    <a class="navigation__link navigation__link--donate" href="index.html#donate-info">DONATE</a>
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="#volunteerprogram">VOLUNTEER PROGRAM</a>
+                    <a class="navigation__link" href="index.html#volunteerprogram">VOLUNTEER PROGRAM</a>
                 </li>
 
                 <li class="navigation__item">
