Added new photo files and some file changes

--- a/index.html
+++ b/index.html
@@ -401,9 +401,13 @@
                     <h2 class="section__header">OUR VOLUNTEER PROGRAM</h2>
                 </header>
                 <section class="partners__grid">
-                    <a href="volunteerprogram.html#childcare" target="blank"><img class="partners__logo" src="img/stepafrica.jpg" alt="Step Africa Logo."></a>
-                    <a href="volunteerprogram.html#womensempowerment" target="blank"><img class="partners__logo" src="img/vivatanzania.png" alt="Viva Tanzania Logo."></a>
-                    <a href="volunteerprogram.html#youthsempowerment" target="blank"><img class="partners__logo" src="img/siretvolunteers.png" alt="Siret Volunteers Logo."></a>
+                    <a href="volunteerprogram.html#volunteering_in_general"><h2>Volunteering in General</h2><img class="partners__logo" src="img/hannahvolunteer.jpg" alt="Childcare Program."></a>
+                    <a href="volunteerprogram.html#childcare"><h2>Childcare Program</h2><img class="partners__logo" src="img/childcareprogram.jpg" alt="Childcare Program."></a>
+                    <a href="volunteerprogram.html#womensempowerment" ><h2>Women's Empowerment Program</h2><img class="partners__logo" src="img/kipepeo1.jpg" alt="Women's Empowerment Program."></a>
+                    <a href="volunteerprogram.html#youthsempowerment" ><h2>Youths' Empowerment Program</h2><img class="partners__logo" src="img/youths.jpg" alt="Youths' Empowerment Program."></a>
+
+                    <a href="volunteerprogram.html#youthsempowerment" ><h2>After school(remedial) Classes</h2><img class="partners__logo" src="img/remedialclass.jpg" alt="Youths' Empowerment Program."></a>
+                    <a href="volunteerprogram.html#youthsempowerment" ><h2>The Sponsorship Program</h2><img class="partners__logo" src="img/sponsorship.jpg" alt="Youths' Empowerment Program."></a>
                 </section>
             </section>
         </main>
@@ -421,8 +425,6 @@
                     <p class="footer__paragraph">Mobile: <br><span class="footer__important footer__important--lower">+255 753-516-911 / 784-516-911</span></p>
                 </section>
 
-
-
                 <!--<section class="footer__logo-grid">
                     <img class="footer__logo-img" src="img/giraffe.svg" alt="Giraffe Logo.">
                     <h3 class="footer__logo-text">TWIGA VISION<br>GERMANY</h3>
@@ -436,9 +438,9 @@
             
             
             <div class="footer__social-grid">
-                <a href="https://www.facebook.com/TwigaVisionTanzania/?ref=page_internal" class="footer__social-box"><i class="footer__social-icon footer__social-icon--facebook icon-facebook"></i></a>
-                <a href="https://www.instagram.com/twigavisiontanzania/" class="footer__social-box"><i class="footer__social-icon footer__social-icon--instagram icon-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/twiga-vision-tanzania"class="footer__social-box"><i class="footer__social-icon footer__social-icon--linkedin icon-linkedin"></i></a>
+                <a href="https://www.facebook.com/TwigaVisionTanzania/?ref=page_internal" target="blank" class="footer__social-box"><i class="footer__social-icon footer__social-icon--facebook icon-facebook"></i></a>
+                <a href="https://www.instagram.com/twigavisiontanzania/" target="blank" class="footer__social-box"><i class="footer__social-icon footer__social-icon--instagram icon-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/twiga-vision-tanzania" target="blank" class="footer__social-box"><i class="footer__social-icon footer__social-icon--linkedin icon-linkedin"></i></a>
             </div>
         </footer>
 
