--- a/volunteerprogram.html
+++ b/volunteerprogram.html
@@ -79,6 +79,23 @@
 	</header>
 
     <main class="main__grid">
+
+
+        <section class="partner partner--one" id="volunteering_in_general">
+            <header>
+                <h2 class="partner__header">Volunteering in general</h2>
+            </header>
+            <section class="partner__subsection">
+                <div class="partner__wall">
+                    <img class="partner__pic" alt="Childcare Program." src="img/johannaandina.jpg">
+                </div>
+                <div class="partner__wall">
+                    <p class="partner__paragraph partner__paragraph--siretvolunteers">Volunteering and internships are great opportunities to get to know a country in a different and more authentic way than tourists. You can help us support our Tanzanian team in one (or more!) of our projects in the fields of education, social, health or women’s and youth empowerment and gain valuable work experience. You will experience first-hand what it means to be in a foreign country and gather exciting intercultural experiences that will be invaluable for your future life.
+                    </p>
+  
+                </div>
+            </section>
+        </section>
         
         <section class="partner partner--one" id="childcare">
             <header>
@@ -86,13 +103,12 @@
             </header>
             <section class="partner__subsection">
                 <div class="partner__wall">
-                    <img class="partner__pic" alt="Step Africa Logo." src="img/stepafrica.jpg">
+                    <img class="partner__pic" alt="Childcare Program." src="img/children.jpg">
                 </div>
                 <div class="partner__wall">
-                    <p class="partner__paragraph partner__paragraph--stepafrica">STEP Africa ( S tudents for T anzania E xchange P rograms - Africa) is a Tanzanian social enterprise that was founded in German-Tanzanian cooperation. They offer a variety of volunteer projects, internships and culture-sensitive travel in Arusha, northern Tanzania. With their programs, they make their contribution to international understanding and want to give their participants intercultural and global capacity for action along the way. As a sustainable organization, they support, with the support of their participants, for eligible projects and initiatives in Tanzania.
+                    <p class="partner__paragraph partner__paragraph--stepafrica">Volunteering with us, in our Childcare Program, is so satisifying in terms of your daily activities. You get to interact with these little angels and become part of a team that helps them develop a perspective for their future life. As a volunteer, you have many options as for what you can offer in this program. Teaching them English, sposrts and games, arts and so much more. Also you have the option of serving food to the kids. In all the programs we expect you to be as creative as possible so as to make this program interesting for the kids to enjoy the lessons and have fun. We are so open for new ways of doing things. Your new ideas are so valuable.
                     </p>
-                    <p class="partner__link-paragraph"><a class="partner__link partner__link--stepafrica" target="_blank" href="https://www.step-africa.com">VISIT STEP AFRICA</a></p>
-
+  
                 </div>
             </section>
         </section>
@@ -103,7 +119,7 @@
             </header>
             <section class="partner__subsection">
                 <div class="partner__wall">
-                    <img class="partner__pic" alt="Viva Tanzania Logo." src="img/vivatanzania.png">
+                    <img class="partner__pic" alt="women's Empowerment Program." src="img/women.jpg">
                 </div>
                 <div class="partner__wall">
                     <p class="partner__paragraph partner__paragraph--vivatanzania">Volunteering and internships are great opportunities to get to know a country in a different and more authentic way than tourists. You can help us support our Tanzanian team in one (or more!) of our projects in the fields of education, social, health or women’s and youth empowerment and gain valuable work experience. You will experience first-hand what it means to be in a foreign country and gather exciting intercultural experiences that will be invaluable for your future life.</p>
