--- a/articles.html
+++ b/articles.html
@@ -88,7 +88,7 @@
             
             <section class="articles articles--one" id="010">
                 <header>
-                    <h2 class="articles__header"> My test knowlege
+                    <h2 class="articles__header"> The Kipepeo Group turns into a Women's Empowerment Program.
                     </h2>
                 </header>
                 <section class="articles__subsection">
@@ -97,10 +97,10 @@
                     </div>
                     <div class="articles__wall">
                         <p class="articles__paragraph">
-                            This is a test text to see if I could change sections on the articles page. Hope this works for me.
+                           The first of March 2023, was a historical day where we changed our Kipepeo women's group into a Women's Empowerment Program. This was to give women more flexibility in terms of making choices of what they really want to engage in and what they don't want to be involved in at all. This will give more freedom to the women to choose what kind of activities they want to do and focus on that only. Example if a woman wants to be fully involved in sewing, then they don't have to engage in other things like jellewery making.
                         </p>
 
-                        <p class="articles__paragraph articles__paragraph--date">2022 OCTOBER 06</p>
+                        <p class="articles__paragraph articles__paragraph--date">2023 MARCH 01</p>
                     </div>
                 </section>
             </section>
