--- a/volunteerprogram.html
+++ b/volunteerprogram.html
@@ -92,6 +92,9 @@
                 <div class="partner__wall">
                     <p class="partner__paragraph partner__paragraph--siretvolunteers">Volunteering and internships are great opportunities to get to know a country in a different and more authentic way than tourists. You can help us support our Tanzanian team in one (or more!) of our projects in the fields of education, social, health or women’s and youth empowerment and gain valuable work experience. You will experience first-hand what it means to be in a foreign country and gather exciting intercultural experiences that will be invaluable for your future life.
                     </p>
+
+                    <p class="partner__paragraph partner__paragraph--siretvolunteers">We offer you a variety of projects, that you can engage in while volunteering with us. The most appealing ones are related to working with women, children and youth. The health sector is not left behind. we, through our partner projects, we can offer you a great placement in a health centre as well as in a hospital.
+                    </p>
   
                 </div>
             </section>
