The newest change

--- a/volunteerprogram.html
+++ b/volunteerprogram.html
@@ -90,9 +90,9 @@
                     <img class="partner__pic" alt="Childcare Program." src="img/johannaandina.jpg">
                 </div>
                 <div class="partner__wall">
-                    <p class="partner__paragraph partner__paragraph--siretvolunteers">Volunteering and internships are great opportunities to get to know a country in a different and more authentic way than tourists. You can help us support our Tanzanian team in one (or more!) of our projects in the fields of education, social, health or women’s and youth empowerment and gain valuable work experience. You will experience first-hand what it means to be in a foreign country and gather exciting intercultural experiences that will be invaluable for your future life.
+                    <p class="partner__paragraph partner__paragraph--siretvolunteers">Volunteering is a great way to explore your life potentials while exploring the greatness of cultural diversity of the universe. Volunteering and internships are a great opportunity to learn about another country's cultural and political uniqueness while, at the same time, engaging in a humanitarian cause. You get to know the country in a different and more authentic way than just being a tourist. You can help us support our Tanzanian team in one (or more!) of our projects in the fields of education, social, health or women’s and youth empowerment and gain valuable work experience. You will experience first-hand what it means to be in a foreign country and gather exciting intercultural experiences that will be invaluable for your future life.
                     <br><br>
-                    We offer you a variety of projects, that you can engage in while volunteering with us. The most appealing ones are related to working with women, children and youths. We offer you great placements in a variety of sectors this includes the health sector. We will place you in Daycare centres, primary schools, women's groups,  orphanage centres and health centres as well as in a hospitals.
+                    We offer you a variety of projects, that you can engage in while volunteering with us. The most appealing ones are related to working with women, children and youths. We provide you with great placements in a variety of sectors this includes the health sector. You will work in Daycare centres, primary schools, women's groups,  orphanage centres and health centres as well as in a hospitals.
                     </p>
   
                 </div>
@@ -124,8 +124,9 @@
                     <img class="partner__pic" alt="women's Empowerment Program." src="img/women.jpg">
                 </div>
                 <div class="partner__wall">
-                    <p class="partner__paragraph partner__paragraph--vivatanzania">Volunteering and internships are great opportunities to get to know a country in a different and more authentic way than tourists. You can help us support our Tanzanian team in one (or more!) of our projects in the fields of education, social, health or women’s and youth empowerment and gain valuable work experience. You will experience first-hand what it means to be in a foreign country and gather exciting intercultural experiences that will be invaluable for your future life.</p>
-                    <p class="partner__link-paragraph"><a class="partner__link partner__link--vivatanzania" target="_blank" href="https://www.viva-tanzania.com">VISIT VIVA TANZANIA</a></p>
+                    <p class="partner__paragraph partner__paragraph--vivatanzania">Our women's empowerment program is another area we need volunteers for. We partner with a number of women's groups that engage in different social and economic activities, that usually need people with expertise to help for them to make progress in their various activities. Among the activities the volunteer will be expected to involved in are; finding markets for their hand-made products, promoting their causes on social media, providing business training to them, providing them with general health lessons this includes mental health training as well as nutrition training. The women also need to be empowered socially so they can stand for their rights, this include their legal rights.</p>
+                   <p class="partner__link-paragraph"><a class="partner__link partner__link--siretvolunteers" target="_blank" href="https://www.twigavision.org/women.html/">LEARN MORE</a></p>
+               
                 </div>
             </section>
         </section>
@@ -141,7 +142,7 @@
                 <div class="partner__wall">
                     <p class="partner__paragraph partner__paragraph--siretvolunteers">
                         Siret Volunteers is a volunteer organisation founded and based in Arusha Tanzania, aiming to bring people together to help disadvantaged people in the local community find better opportunities. Through working together in social projects, the aim is to uplift impoverished parts of the community through meaningful projects and share the beautiful culture of Tanzania through meaningful travel. We achieved full NGO licensing and registration in 2017. </p>
-                    <p class="partner__link-paragraph"><a class="partner__link partner__link--siretvolunteers" target="_blank" href="https://www.siretvolunteers.com/">VISIT SIRET VOLUNTEERS</a></p>
+                        <p class="partner__link-paragraph"><a class="partner__link partner__link--siretvolunteers" target="_blank" href="https://www.twigavision.org/youths.html/">LEARN MORE</a></p>
                 </div>
             </section>
         </section>
