changed index file

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                             <a class="programs__link" href="programs.html#program-one">
                                 <h3 class="programs__title">The Sponsorship Program</h3>
                                 <p class="programs__paragraph">
-                                    Our sponsorship program is one of the key programs at Twiga Vision Tanzania. This is due to the fact that this program has directly and/or indirectly impacted on many people’s lives in the surrounding communities, which is exactly what the program is there for. With only 20€ a month, you can give a bright future to a child who wouldn't otherwise get one.
+                                    Our sponsorship program is one of the key programs at Twiga Vision Tanzania. This is due to the fact that this program has directly and/or indirectly impacted on many people’s lives in the surrounding communities, which is exactly what the program is there for. With only 20€ a month, you can give a brighter future to a child who wouldn't otherwise get one.
                                 </p>
                             </a>
                         </div>
