index.html modified again

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             The charity supports women with children in developing a perspective in Tanzanian society, becoming more independent and starting a professional career without neglecting their children. While the women are given advice on work and self-employment, the children are given the opportunity to go to school.
                             <br>
                             <br>
-                            Young people are provided with life skills’ education that enables them to become good citizens as well as becoming responsible members of the community.
+                            Young people are provided with life skills’ education that enables them to become good citizens as well as becoming responsible members of the community. On top of that they get to learn handcraft work.
                         </p>
                     </article>
                 </div>
