Changed the heading

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <header class="header-main">
             <section class="top">
-                <h2 class="top__logo">TWIGA VISION TANZANIA</h2>
+                <h2 class="top__logo">TWIGA VISIO TANZANIA</h2>
                 <button class="hamburger hamburger--js">☰</button>
             </section>
             <nav class="navigation">
